feat(math): add Vector API configuration and Fabric error screen for missing module